--- a/src/app/components/todo/todo.component.css
+++ b/src/app/components/todo/todo.component.css
@@ -1,3 +1,11 @@
 li {
     margin-bottom: 5px;
+    list-style-type: decimal;
+}
+.btnDone{
+    margin-right: 5px;
+}
+.todoDone { 
+    text-decoration: line-through;
+    margin-right: 5px;
 }
