--- a/src/app/components/todo/todo.component.html
+++ b/src/app/components/todo/todo.component.html
@@ -1,24 +1,35 @@
 <div class="container">
   <h1>Inpup Todo!</h1>
-  <form action="submit" (submit)="addTodo(todoInfo.value)">
+  <form action="submit" (submit)="addTodo()">
     <div class="input-group mb-3">
       <input
         type="text"
         class="form-control"
-        aria-label="Text input with checkbox"
         placeholder="Input ToDo!"
-        #todoInfo
+        name="valueInput"
+        [(ngModel)]="valueInput"
       />
     </div>
     <button type="submit" class="btn btn-success">Добавить</button>
   </form>
   <br />
-  <ul>
-    <li *ngFor="let todo of todos">
-      {{ todo.info }}
-      <button class="btn btn-success" (click)="completeTodo(todo)">✓</button>
-      <br />
-    </li>
-  </ul>
+  <div *ngIf="todos.length != 0; else elseBlock">
+    <ul>
+      <li *ngFor="let todo of todos">
+        <span *ngIf="todo.done == false; else todoDone"> {{ todo.info }} </span>
+        <ng-template #todoDone
+          ><span class="todoDone"> {{ todo.info }}</span>
+        </ng-template>
+        <button class="btn btn-success btnDone" (click)="doneTodo(todo)">
+          ✓
+        </button>
+        <button class="btn btn-danger" (click)="removeTodo(todo)">✕</button>
+        <br />
+      </li>
+    </ul>
+  </div>
+  <ng-template #elseBlock>
+    <span>No todo!</span>
+  </ng-template>
 </div>
 <!-- <input type="text" placeholder="Input ToDo!" #todoInfo /> -->
